--- a/CreatureScriptsParser.csproj
+++ b/CreatureScriptsParser.csproj
@@ -56,9 +56,8 @@
     <StartupObject>CreatureScriptsParser.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DBFileReaderLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>DBFileReaderLib\bin\Release\netstandard2.0\DBFileReaderLib.dll</HintPath>
+    <Reference Include="DBFileReaderLib">
+      <HintPath>D:\Creature Scripts Parser\DBFileReaderLib\bin\Release\netstandard2.0\DBFileReaderLib.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=6.10.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -67,6 +66,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
