--- a/CreatureScriptsParser.csproj
+++ b/CreatureScriptsParser.csproj
@@ -12,6 +12,7 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -24,7 +25,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -56,9 +56,6 @@
     <StartupObject>CreatureScriptsParser.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DBFileReaderLib">
-      <HintPath>D:\Creature Scripts Parser\DBFileReaderLib\bin\Release\netstandard2.0\DBFileReaderLib.dll</HintPath>
-    </Reference>
     <Reference Include="MySql.Data, Version=6.10.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Packages\MySql.Data.6.9.9\lib\net45\MySql.Data.dll</HintPath>
@@ -80,9 +77,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Creator.cs" />
-    <Compile Include="Dbc\Dbc.cs" />
-    <Compile Include="Dbc\Structures\DBFileAttribute.cs" />
-    <Compile Include="Dbc\Structures\SpellNameEntry.cs" />
+    <Compile Include="DB2\DB2_Database.cs" />
+    <Compile Include="DB2\Storage.cs" />
+    <Compile Include="DB2\Structures\SpellName.cs" />
     <Compile Include="LineGetters.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -99,6 +96,7 @@
     <Compile Include="Utils.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
